--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   flutter_reaction_button: ^3.0.0+3
   flutter_riverpod: ^2.5.1
+  flutter_sound: ^9.11.2
   fluttertoast: ^8.2.7
   font_awesome_flutter: ^10.7.0
   go_router: ^14.2.3
